add read perms for action

--- a/.github/workflows/update-chalk-private.yml
+++ b/.github/workflows/update-chalk-private.yml
@@ -6,6 +6,9 @@ on:
 
 jobs:
   dispatch:
+    permissions:
+      contents: 'read'
+
     runs-on: ubuntu-latest
     steps:
       - name: Repository dispatch
