--- a/.github/workflows/update-chalk-private.yml
+++ b/.github/workflows/update-chalk-private.yml
@@ -6,15 +6,12 @@ on:
 
 jobs:
   dispatch:
-    permissions:
-      contents: 'read'
-
     runs-on: ubuntu-latest
     steps:
       - name: Repository dispatch
         uses: peter-evans/repository-dispatch@v2
         with:
-          token: ${{ secrets.CHALK_PRIVATE_TOKEN }}
+          token: ${{ secrets.CHALK_PRIVATE_PAT }}
           repository: chalk-ai/chalk-private
           event-type: docs-update
           client-payload: '{"ref": "${{ github.ref_name }}", "sha": "${{ github.sha }}"}'
