--- a/.github/workflows/auto-approve-labels.yaml
+++ b/.github/workflows/auto-approve-labels.yaml
@@ -20,4 +20,4 @@ jobs:
         run: |
           gh pr --repo chalk-ai/docs merge ${{ github.event.pull_request.number }} --admin --squash --delete-branch
         env:
-          GITHUB_TOKEN: ${{ secrets.CI_SERVICES_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.CHALK_PRIVATE_TOKEN }}
